force-app/main/default/objects/Opportunity/fields/LT_Estimated_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LT_Estimated_Monthly_Revenue__c</fullName>
    <description>Receita mensal estimada: volume mensal estimado x preco por pacote proposto.</description>
    <formula>BLANKVALUE(LT_Estimated_Monthly_Volume__c, 0) * BLANKVALUE(LT_Proposed_Price_Per_Package__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receita Mensal Estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>