force-app/main/default/objects/Opportunity/fields/LT_Estimated_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>LT_Estimated_Monthly_Volume__c</fullName>
    <description>Volume mensal de pacotes que o embarcador prospectado pretende enviar.</description>
    <inlineHelpText>Estimativa de pacotes por mes informada pelo prospect.</inlineHelpText>
    <label>Volume Mensal Estimado (pacotes)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>