force-app/main/default/objects/Opportunity/fields/LT_Pickup_Model__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_Model__c</fullName>
    <description>Modelo de coleta pretendido pelo embarcador prospectado.</description>
    <label>Modelo de Coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coleta no Seller</fullName>
            </value>
            <value>
                <fullName>Coleta no DropOff</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>