force-app/main/default/objects/Opportunity/fields/LT_Proposed_Price_Per_Package__c.field-meta.xml
<CustomField>
    <fullName>LT_Proposed_Price_Per_Package__c</fullName>
    <description>Preco por pacote proposto ao embarcador durante a negociacao.</description>
    <label>Preco por Pacote Proposto</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>