force-app/main/default/objects/Opportunity/fields/LT_Prospect_Segment__c.field-meta.xml
<CustomField>
    <fullName>LT_Prospect_Segment__c</fullName>
    <description>Segmento de mercado do embarcador prospectado.</description>
    <label>Segmento do Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>E-commerce Proprio</fullName>
            </value>
            <value>
                <fullName>Industria / Fabricante</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>