force-app/main/default/objects/Opportunity/recordTypes/LT_Shipper_Prospecting.recordType-meta.xml
<RecordType>
    <fullName>LT_Shipper_Prospecting</fullName>
    <active>true</active>
    <businessProcess>LT_Shipper_Sales_Process</businessProcess>
    <description>Prospeccao de novos embarcadores pela equipe comercial: da qualificacao ate a assinatura do contrato.</description>
    <label>Prospeccao de Embarcador</label>
</RecordType>